--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2604,7 +2604,8 @@ input, select, textarea {
 		position: fixed;
 		text-align: right;
 		top: 0;
-		width: 35%;
+		/* width: 35%; */
+		width: 30%;
 	}
 
 		#header > * {
@@ -2633,7 +2634,15 @@ input, select, textarea {
 
 		#header h1 {
 			color: rgba(255, 255, 255, 0.5);
+			/* font-size: 1.35em; */
 			font-size: 1.35em;
+			line-height: 1.75em;
+			margin: 0;
+		}
+		#header p {
+			color: rgba(255, 255, 255, 0.5);
+			/* font-size: 1.35em; */
+			font-size: 1em;
 			line-height: 1.75em;
 			margin: 0;
 		}
@@ -2682,10 +2691,12 @@ input, select, textarea {
 /* Main */
 
 	#main {
-		margin-left: 35%;
+		/* margin-left: 35%; */
+		margin-left: 25%;
 		max-width: 54em;
 		padding: 8em 4em 4em 4em;
-		width: calc(100% - 35%);
+		/* width: calc(100% - 35%); */
+		width: calc(100% - 25%);
 	}
 
 		#main > section {
